Fix image overflow in about page

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,202 +1,211 @@
 :root {
-    --main-color-black: #272a31;
-    --main-color-red: #ec5242;
-    --main-color-gray: #d3d3d3;
-  }
+  --main-color-black: #272a31;
+  --main-color-red: #ec5242;
+  --main-color-gray: #d3d3d3;
+}
 
 .title-and-description {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 1.5rem;
-    background-color: rgb(211, 211, 211, 0.3);
-    border-bottom: 2px solid var(--main-color-gray);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 1.5rem;
+  background-color: rgb(211, 211, 211, 0.3);
+  border-bottom: 2px solid var(--main-color-gray);
 }
 
 .title-and-description .hero-title {
-    position: relative;
+  position: relative;
+  color: var(--main-color-red);
+  width: 100%;
+  background-clip: unset;
+  background-image: none;
+  -webkit-text-fill-color: var(--main-color-red);
+}
+
+.title-and-description .hero-title::after {
+  content: "";
+  position: absolute;
+  top: 8rem;
+  left: 50%;
+  width: 3rem;
+  height: 1px;
+  transform: translate(-50%, -50%);
+  background-color: #ec5242;
+}
+
+.description-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0;
+  text-align: center;
+}
+
+.title-and-description .description-text {
+  border: 2px solid var(--main-color-gray);
+  padding: 1rem;
+  width: 100%;
+  background-color: rgb(255, 255, 255, 1);
+  text-align: center;
+}
+
+.title-and-description .description-text p {
+  display: none;
+}
+
+.program-place {
+  font-size: 0.9rem;
+  padding: 0;
+}
+
+.email-link a {
+  font-weight: bold;
+  color: var(--main-color-black);
+}
+
+.main-program {
+  background-color: #fff;
+  gap: 2rem;
+  padding: 2rem 1rem;
+  color: var(--main-color-black);
+  background-image: none;
+}
+
+.main-program-title {
+  position: relative;
+  text-align: center;
+}
+
+.main-program-title::after {
+  content: "";
+  position: absolute;
+  top: 6rem;
+  left: 50%;
+  width: 3rem;
+  height: 1px;
+  transform: translate(-50%, -50%);
+  background-color: #ec5242;
+}
+
+.description-text-2 {
+  display: none;
+}
+
+.main-program .join-btn {
+  outline: none;
+  border: 2px solid var(--main-color-gray);
+  padding: 2rem;
+  font-size: 1.2rem;
+  background-color: #fff;
+}
+
+hr {
+  background-color: var(--main-color-gray);
+  border: none;
+  height: 2px;
+  width: 100%;
+}
+
+.history-show-image {
+  position: relative;
+  padding: 2rem 1rem;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.image-and-text {
+  position: relative;
+  padding: 2rem 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: var(--main-color-red);
+  overflow: hidden;
+  text-align: center;
+}
+
+.image-and-text img {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  object-fit: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+}
+
+.year {
+  color: #fff;
+  z-index: 1;
+  font-weight: 600;
+  font-size: 2rem;
+}
+
+.year-description {
+  z-index: 1;
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .title-and-description .hero-title {
     color: var(--main-color-red);
-    width: 100%;
-    background-clip: unset;
-    background-image: none;
-    -webkit-text-fill-color: var(--main-color-red);
+    width: 75%;
   }
 
   .title-and-description .hero-title::after {
     content: "";
     position: absolute;
-    top: 8rem;
+    top: 13rem;
     left: 50%;
     width: 3rem;
     height: 1px;
     transform: translate(-50%, -50%);
     background-color: #ec5242;
-  }
-
-  .title-and-description .description-text {
-    border: 2px solid var(--main-color-gray);
-    padding: 1rem;
-    width: 100%;
-    background-color: rgb(255, 255, 255, 1);
-    text-align: center;
   }
 
   .title-and-description .description-text p {
-    display: none;
-  }
-  .program-place {
-    font-size: 0.9rem;
-    padding: 0;
-  }
-  .email-link a {
-    font-weight: bold;
-    color: var(--main-color-black);
-  }
- 
-.main-program {
-    background-color: #fff;
-    gap: 2rem;
-    padding: 2rem 1rem;
-    color: var(--main-color-black);
-    background-image: none;
+    display: block;
+    padding: 1rem 2rem;
   }
 
-  .main-program-title {
-    position: relative;
-    text-align: center;
+  .title-and-description .program-place {
+    font-size: 1rem;
+    font-weight: 550;
   }
 
   .main-program-title::after {
-    content: "";
-    position: absolute;
-    top: 6rem;
-    left: 50%;
-    width: 3rem;
-    height: 1px;
-    transform: translate(-50%, -50%);
-    background-color: #ec5242;
+    top: 4rem;
   }
-  .description-text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 0;
-    text-align: center;
-  }
+
   .description-text-2 {
-    display: none;
+    display: block;
+    width: 50%;
+    text-align: center;
   }
 
   .main-program .join-btn {
-    outline: none;
-    border: 2px solid var(--main-color-gray);
-    padding: 2rem;
-    font-size: 1.2rem;
-    background-color: #fff;
+    display: block;
   }
 
-  hr {
-    background-color: var(--main-color-gray);
-    border: none;
-    height: 2px;
+  .history-show-image {
+    flex-direction: row;
+    padding: 2rem 10rem;
     width: 100%;
+    height: 50vh;
   }
-
-.history-show-image {
-    position: relative;
-    padding: 1rem;
-    height: 75vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 1rem;
-}
 
   .image-and-text {
-    position: relative;
-    padding: 2rem 1rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width:60%;
-    height: 50%;
-    background-color: var(--main-color-red);
-    overflow: hidden;
+    width: 32%;
   }
-
-  .image-and-text img {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    position: absolute;
-    height: 100%;
-    opacity: 0.3;
-    background-blend-mode: multiply;
-  }
-  
-  .year {
-    color: #fff;
-    z-index: 1;
-    font-weight: 600;
-    font-size: 2rem;
-  }
-
-  .year-description {
-    z-index: 1;
-    color: #fff;
-  }
-
-  @media (min-width: 768px) {
-    .title-and-description .hero-title {
-        color: var(--main-color-red);
-        width: 75%;
-      }
-
-      .title-and-description .hero-title::after {
-        content: "";
-        position: absolute;
-        top: 13rem;
-        left: 50%;
-        width: 3rem;
-        height: 1px;
-        transform: translate(-50%, -50%);
-        background-color: #ec5242;
-      }
-
-      .title-and-description .description-text p {
-        display: block;
-        padding: 1rem 2rem;
-      }
-
-      .title-and-description .program-place {
-        font-size: 1rem;
-        font-weight: 550;
-      }
-    
-      .main-program-title::after {
-        top: 4rem;
-      }
-      .description-text-2 {
-        display: block;
-        width: 50%;
-        text-align: center;
-      }
-
-      .main-program .join-btn {
-      display: block;
-      }
-
-      .history-show-image {
-        flex-direction: row;
-        padding: 0 10rem;
-        width: 100%;
-    }
-    .image-and-text {
-        width: 32%;
-      }
-    
-  }
+}
